--- a/FoodAE.ipynb
+++ b/FoodAE.ipynb
@@ -487,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "a6708e67",
+   "id": "7f042763",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "4ca5ab81",
+   "id": "ecd3336b",
    "metadata": {},
    "outputs": [
     {
@@ -640,8 +640,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
+   "id": "3cfec0f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Création des échantillons d'entraînement et de test:\n",
+    "seed=20\n",
+    "X_train,X_test=train_test_split(samesize,random_state=seed)\n",
+    "Y_train,Y_test=train_test_split(samelabels,random_state=seed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "14527210",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9119 3040\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(X_train),len(X_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "9a65afa6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Consstruction de l'autoencodeur:\n",
+    "\n",
+    "latent_dim = 64 \n",
+    "height=512  #=width\n",
+    "width=512\n",
+    "channels=3\n",
+    "\n",
+    "class Autoencoder(Model):\n",
+    "  def __init__(self, latent_dim):\n",
+    "    super(Autoencoder, self).__init__()\n",
+    "    self.latent_dim = latent_dim   \n",
+    "    self.encoder = tf.keras.Sequential([\n",
+    "      layers.Flatten(),\n",
+    "      layers.Dense(latent_dim, activation='relu'),\n",
+    "    ])\n",
+    "    self.decoder = tf.keras.Sequential([\n",
+    "      layers.Dense(262144, activation='sigmoid'),\n",
+    "      layers.Reshape((height, width))\n",
+    "    ])\n",
+    "\n",
+    "  def call(self, x):\n",
+    "    encoded = self.encoder(x)\n",
+    "    decoded = self.decoder(encoded)\n",
+    "    return decoded\n",
+    "\n",
+    "autoencoder = Autoencoder(latent_dim)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "182093cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "autoencoder.compile(optimizer='adam', loss=losses.MeanSquaredError())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "374c6ae7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "KeyboardInterrupt\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "autoencoder.fit(X_train, X_train,\n",
+    "                epochs=10,\n",
+    "                shuffle=True,\n",
+    "                validation_data=(X_test, X_test))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1066225c",
    "metadata": {},
    "outputs": [],
    "source": []
